# wayfinder

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  Makefile  PLAN.md  README.md  coverage.xml  mkdocs.yml  oracle-cli-user-guide.md  oracle-interaction-protocol-v0.1.md  pyproject.toml  setup.sh  wayfinder-cli-user-guide.md  wayfinder-interaction-protocol-v0.1.md
.github/workflows/: ci.yml  main.yml
docs/: wayfinder-security.md
docs/reports/: index.md
examples/: _common.sh
examples/02-quickstart/: run.sh
examples/03-recommendation-types/: run.sh
examples/04-executor/: run.sh
examples/05-audit/: run.sh
examples/06-updates/: run.sh
examples/07-wrap/: run.sh
examples/08-prose/: run.sh
examples/09-bridge-gh/: run.sh
examples/09-machines/: run.sh
examples/09-temporal/: run.sh
examples/09-web/: run.sh
examples/10-deference/: run.sh
examples/11-artifacts/: run.sh
examples/12-errors/: run.sh
examples/ansible/playbooks/: site.yml
examples/appendix-pocket/: run.sh
examples/domains/: cluster-maintenance.pddl
examples/fixtures/: approval_playbook.json  large_output_playbook.json  pocket_playbook.json  six_types_playbook.json  tell_observation_responses.json  web_policy.json  wrap_ansible_check_playbook.json  wrap_curl_playbook.json  wrap_ffmpeg_playbook.json
examples/scripts/: run_with_llm_stub.py
examples/trees/: staging-health.bt  test-check.bt
hooks/: copy_canonical_docs.py
reports-out/: examples.json
schemas/common/: 0.1.json
schemas/wip.event/: 0.1.json
schemas/wip.goal/: 0.1.json
schemas/wip.goal_create/: 0.1.json
schemas/wip.status/: 0.1.json
schemas/wip.update/: 0.1.json
scripts/: build_reports.py  collect_examples.py
src/wayfinder/: __init__.py  cli.py
src/wayfinder/ask/: __init__.py  __main__.py  main.py
src/wayfinder/brains/: __init__.py  base.py  bt.py  codex.py  default_playbook.json  llm.py  make.py  plan.py  scripted.py  tw.py  web.py  wrap.py
src/wayfinder/bridge/: __init__.py  __main__.py  main.py
src/wayfinder/bridge/gh/: __init__.py  client.py  state.py  sync.py
src/wayfinder/bt/: __init__.py  __main__.py  main.py
src/wayfinder/chat/: __init__.py  __main__.py  main.py
src/wayfinder/cli/: __init__.py  __main__.py  capabilities.py  doctor.py  jsonrpc.py  main.py  responses.py  service.py  store_paths.py
src/wayfinder/codex/: __init__.py  __main__.py  main.py
src/wayfinder/core/: AGENTS.md  __init__.py  artifacts.py  canonical.py  errors.py  event_log.py  freshness.py  goal_store.py  hash_chain.py  idempotency.py  lock.py  reducer.py  snapshot.py  types.py  updates.py  validation.py
src/wayfinder/do/: __init__.py  __main__.py  main.py
src/wayfinder/exec/: __init__.py  __main__.py  durability.py  loop.py  main.py  policy.py  pty_exec.py  pty_loop.py  secrets.py  shell_exec.py  wayfinder_client.py  web_exec.py  web_loop.py
src/wayfinder/exec_pty/: __init__.py  __main__.py  main.py
src/wayfinder/exec_temporal/: __init__.py  __main__.py  main.py  runner.py  workflow.py
src/wayfinder/exec_web/: __init__.py  __main__.py  main.py
src/wayfinder/llm/: __init__.py  client.py  config.py  errors.py  structured.py  validate.py
src/wayfinder/make/: __init__.py  __main__.py  main.py
src/wayfinder/plan/: __init__.py  __main__.py  main.py
src/wayfinder/prose/: __init__.py  ask.py  context.py  goal.py  narrate.py  update.py
src/wayfinder/tell/: __init__.py  __main__.py  main.py
src/wayfinder/tw/: __init__.py  __main__.py  main.py
src/wayfinder/web/: __init__.py  __main__.py  main.py  runner.py
src/wayfinder/wrap/: __main__.py  main.py
tests/: conftest.py  test_ask_cli.py  test_bridge_gh_cli.py  test_bt_cli.py  test_chat_cli.py  test_cli.py  test_codex_cli.py  test_deference.py  test_do_cli.py  test_examples_scripted.py  test_exec_cli.py  test_exec_pty_cli.py  test_exec_temporal_cli.py  test_exec_temporal_runner.py  test_exec_web_cli.py  test_make_cli.py  test_plan_cli.py  test_tell_cli.py  test_tw_cli.py  test_tw_main.py  test_version.py  test_web_cli.py  test_wrap_cli.py
tests/brains/: test_bt.py  test_codex.py  test_llm.py  test_make.py  test_plan.py  test_tw.py  test_web.py  test_wrap.py
tests/cli/: test_commands.py  test_doctor.py  test_jsonrpc.py  test_store_paths.py
tests/conformance/: helpers.py  test_appendix_b_cli.py  test_appendix_b_exec.py  test_appendix_b_jsonrpc.py  test_appendix_b_updates.py
tests/conformance/scripts/: lock_probe.py
tests/core/: test_artifacts.py  test_artifacts_extra.py  test_canonical.py  test_core_integration.py  test_event_log.py  test_find_recommendation.py  test_freshness.py  test_hash_chain.py  test_idempotency.py  test_lock.py  test_reducer.py  test_snapshot.py  test_snapshot_extra.py  test_updates.py  test_updates_extra.py  test_updates_mapping.py  test_validation.py
tests/exec/: test_durability.py  test_extra.py  test_loop.py  test_policy.py  test_pty_exec.py  test_pty_loop.py  test_secrets.py  test_web_exec.py
tests/exec/fixtures/: login_prompt.py  true_playbook.json
tests/llm/: test_client.py  test_live.py  test_structured.py  test_validate.py
tests/prose/: __init__.py  test_goal.py  test_narrate.py  test_update.py
