[project]
name = "wayfinder"
version = "0.1.0"
description = "Unix command protocol for determining the next step to achieve a goal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Curt Cox" }]
keywords = ["wayfinder", "cli", "protocol", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema>=4.23,<5",
    "rfc8785>=0.1.4,<1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7,<2",
    "hypothesis>=6,<7",
    "mypy>=1.13,<2",
    "pip-audit>=2,<3",
    "pre-commit>=4,<5",
    "pytest>=9,<10",
    "pytest-cov>=6,<7",
    "pytest-html>=4,<5",
    "pytest-xdist>=3,<4",
    "radon>=6,<7",
    "ruff>=0.8,<1",
    "xenon>=0.9,<1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
]

[project.scripts]
wayfinder = "wayfinder.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wayfinder"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "hooks"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
    "ISC001",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103", "PLR2004", "S101", "INP001", "TC003", "SIM117", "E501", "PERF401"]
"tests/cli/**" = ["S603", "I001"]
"hooks/**" = ["D103"]
"src/wayfinder/cli/**" = ["D103", "D102", "D107", "PLR0913", "C901", "TC001", "TC003", "SIM102", "BLE001", "E501"]
"src/wayfinder/cli/main.py" = ["D103", "PLR0912", "PLR0915", "C901", "PLR0911", "TRY301"]
"src/wayfinder/cli/responses.py" = ["RUF002", "SIM114"]
"src/wayfinder/brains/**" = ["D102", "D103", "D107", "ANN401", "TC003"]
"src/wayfinder/core/canonical.py" = ["ANN401"]
"src/wayfinder/core/**" = ["D102", "D107", "TC003"]
"src/wayfinder/core/reducer.py" = ["C901", "PLR0912", "PLR0915", "SIM102"]
"src/wayfinder/core/updates.py" = ["C901", "PLR0911", "PLR0912", "PLR0915", "PLR0913", "ANN401", "D103"]
"src/wayfinder/core/freshness.py" = ["C901", "FBT003", "D103"]
"src/wayfinder/core/validation.py" = ["ANN401", "D103"]
"src/wayfinder/core/idempotency.py" = ["D101", "PTH105", "PTH101"]
"src/wayfinder/core/artifacts.py" = ["PTH105", "PTH101"]
"src/wayfinder/core/types.py" = ["D103"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
files = ["src", "tests", "hooks"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "conformance: Appendix B conformance vectors (Phase 3)",
    "live: requires network or API keys",
]

[tool.coverage.run]
source = ["wayfinder"]
branch = true
omit = [
]

[tool.coverage.report]
fail_under = 79
show_missing = true
skip_empty = true

[tool.coverage.paths]
source = ["src/wayfinder", "*/site-packages/wayfinder"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.bandit.assert_used]
skips = ["*/tests/*"]
