[project]
name = "wayfinder"
version = "0.1.0"
description = "Unix command protocol for determining the next step to achieve a goal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Curt Cox" }]
keywords = ["wayfinder", "cli", "protocol", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28,<1",
    "jsonschema>=4.23,<5",
    "rfc8785>=0.1.4,<1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7,<2",
    "hypothesis>=6,<7",
    "mypy>=1.13,<2",
    "pip-audit>=2,<3",
    "pre-commit>=4,<5",
    "pytest>=9,<10",
    "pytest-cov>=6,<7",
    "pytest-html>=4,<5",
    "pytest-xdist>=3,<4",
    "radon>=6,<7",
    "ruff>=0.8,<1",
    "xenon>=0.9,<1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
]
machines = [
    "py_trees>=2.2,<3",
    "pyperplan>=2.1",
    "pexpect>=4.9,<5",
]
[project.scripts]
wayfinder = "wayfinder.cli.main:main"
wayfinder-exec = "wayfinder.exec.main:main"
wayfinder-wrap = "wayfinder.wrap.main:main"
wayfinder-do = "wayfinder.do.main:main"
wayfinder-tell = "wayfinder.tell.main:main"
wayfinder-ask = "wayfinder.ask.main:main"
wayfinder-chat = "wayfinder.chat.main:main"
wayfinder-make = "wayfinder.make.main:main"
wayfinder-tw = "wayfinder.tw.main:main"
wayfinder-bt = "wayfinder.bt.main:main"
wayfinder-plan = "wayfinder.plan.main:main"
wayfinder-exec-pty = "wayfinder.exec_pty.main:main"
wayfinder-codex = "wayfinder.codex.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wayfinder"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "hooks"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
    "ISC001",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103", "PLR2004", "S101", "INP001", "TC003", "SIM117", "E501", "PERF401"]
"tests/core/**" = ["D103", "PLR2004", "S101", "INP001", "I001"]
"tests/cli/**" = ["S603", "I001"]
"tests/exec/**" = ["S603", "I001", "D103", "PLR2004", "S101", "INP001"]
"tests/test_exec_cli.py" = ["S603", "I001", "D103", "S101", "INP001"]
"hooks/**" = ["D103"]
"src/wayfinder/cli/**" = ["D103", "D102", "D107", "PLR0913", "C901", "TC001", "TC003", "SIM102", "BLE001", "E501"]
"src/wayfinder/cli/main.py" = ["D103", "PLR0912", "PLR0915", "C901", "PLR0911", "TRY301"]
"src/wayfinder/cli/jsonrpc.py" = ["D103", "D102", "PLR0911", "C901", "PLR0912", "BLE001", "SLF001", "TRY301", "ANN401", "RET501", "PLR1711"]
"tests/conformance/**" = ["D103", "PLR2004", "S101", "INP001", "SLF001", "S603", "TC001", "SIM108", "PLR0913"]
"tests/cli/test_jsonrpc.py" = ["D103", "PLR2004", "S101", "INP001", "SLF001"]
"src/wayfinder/cli/responses.py" = ["RUF002", "SIM114"]
"src/wayfinder/brains/**" = ["D102", "D103", "D107", "ANN401", "TC003", "S603", "C901", "PLR0911"]
"src/wayfinder/exec/**" = ["D103", "D102", "D107", "PLR0912", "PLR0915", "PLR0913", "PLR0911", "C901", "S603", "BLE001", "TRY301", "TRY004", "TC003", "TC001", "ANN401", "PLR2004", "RUF002", "PLC0415", "SIM108", "FURB162"]
"src/wayfinder/core/canonical.py" = ["ANN401"]
"src/wayfinder/core/**" = ["D102", "D107", "TC003", "E501"]
"src/wayfinder/core/reducer.py" = ["C901", "PLR0912", "PLR0915", "SIM102"]
"src/wayfinder/core/updates.py" = ["C901", "PLR0911", "PLR0912", "PLR0915", "PLR0913", "ANN401", "D103"]
"src/wayfinder/core/freshness.py" = ["C901", "FBT003", "D103"]
"src/wayfinder/core/validation.py" = ["ANN401", "D103"]
"src/wayfinder/core/idempotency.py" = ["D101", "PTH105", "PTH101"]
"src/wayfinder/core/artifacts.py" = ["PTH105", "PTH101"]
"src/wayfinder/core/types.py" = ["D103"]
"src/wayfinder/llm/**" = ["D103", "D102", "D107", "PLR0913", "PLR0912", "TRY003", "BLE001", "S603", "ANN401", "TC003", "E501", "C901", "TC001"]
"src/wayfinder/wrap/**" = ["D103", "D102", "D107", "BLE001", "TRY301"]
"src/wayfinder/prose/**" = ["D103", "D102", "D107", "ANN401", "TC003", "E501", "C901", "TC001", "PLR0912", "PLR0915", "PLR0913", "ARG001", "RUF002"]
"src/wayfinder/do/**" = ["D103", "D102", "D107", "BLE001", "TRY301", "PLR0913", "ANN401"]
"src/wayfinder/tell/**" = ["D103", "D102", "D107", "BLE001", "TRY301", "PLR0913", "ANN401"]
"src/wayfinder/ask/**" = ["D103", "D102", "D107", "BLE001", "TRY301", "PLR0913", "ANN401"]
"src/wayfinder/chat/**" = ["D103", "D102", "D107", "BLE001", "TRY301", "PLR0913", "ANN401", "PLR0912", "TC003"]
"src/wayfinder/brains/make.py" = ["D102", "D103", "S603", "PLR0913"]
"src/wayfinder/make/**" = ["D103", "D102", "D107", "BLE001", "TRY301"]
"src/wayfinder/brains/tw.py" = ["D102", "D103", "S603", "PLR0913", "C901", "PLR0912", "PLR2004"]
"src/wayfinder/tw/**" = ["D103", "D102", "D107", "BLE001", "TRY301"]
"src/wayfinder/brains/bt.py" = ["D102", "D103", "S603", "PLR0913", "C901", "PLR0912", "ANN401", "N802", "PLC0415", "PLR0915", "E501", "TC006"]
"src/wayfinder/bt/**" = ["D103", "D102", "D107", "BLE001", "TRY301", "S105"]
"src/wayfinder/brains/plan.py" = ["D102", "D103", "S603", "PLR0913", "C901", "PLR0912", "ANN401", "PLC0415", "SLF001", "TC001", "RET504"]
"src/wayfinder/plan/**" = ["D103", "D102", "D107", "BLE001", "TRY301", "S105"]
"src/wayfinder/exec/secrets.py" = ["D103", "PTH123"]
"src/wayfinder/exec/pty_exec.py" = ["D103", "D102", "C901", "PLR0912", "ANN401", "PLC0415", "BLE001"]
"src/wayfinder/exec/pty_loop.py" = ["D103", "D102"]
"src/wayfinder/exec_pty/**" = ["D103", "D102", "D107", "BLE001", "TRY301"]
"src/wayfinder/brains/codex.py" = ["D102", "D103", "C901", "PLR0912", "PLR0911", "PLR0913", "PLR0915", "ANN401", "E501", "TC001"]
"src/wayfinder/codex/**" = ["D103", "D102", "D107", "BLE001", "TRY301"]
"tests/brains/test_plan.py" = ["D103", "PLR2004", "S101", "INP001"]
"tests/exec/test_pty_exec.py" = ["D103", "PLR2004", "S101", "INP001", "S108"]
"tests/test_plan_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/test_exec_pty_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/brains/test_codex.py" = ["D103", "PLR2004", "S101", "INP001"]
"tests/test_codex_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/brains/test_make.py" = ["D103", "PLR2004", "S101", "INP001"]
"tests/brains/test_bt.py" = ["D103", "PLR2004", "S101", "INP001"]
"tests/test_bt_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/test_make_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/brains/test_tw.py" = ["D103", "PLR2004", "S101", "INP001", "D107", "D102", "C901"]
"tests/test_tw_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/llm/**" = ["D103", "PLR2004", "S101", "INP001", "RUF012", "A002", "SLF001"]
"tests/brains/**" = ["D103", "PLR2004", "S101", "INP001"]
"tests/conftest.py" = ["D101", "RUF012"]
"tests/prose/**" = ["D103", "PLR2004", "S101", "INP001", "SLF001", "S108"]
"tests/test_wrap_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/test_do_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/test_tell_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/test_ask_cli.py" = ["S603", "INP001", "D103", "S101"]
"tests/test_chat_cli.py" = ["S603", "INP001", "D103", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
files = ["src", "tests", "hooks"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "py_trees.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyperplan.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pexpect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wayfinder.brains.bt"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "wayfinder.brains.plan"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "conformance: Appendix B conformance vectors (Phase 3)",
    "live: requires network or API keys",
]

[tool.coverage.run]
source = ["wayfinder"]
branch = true
omit = [
]

[tool.coverage.report]
fail_under = 79
show_missing = true
skip_empty = true

[tool.coverage.paths]
source = ["src/wayfinder", "*/site-packages/wayfinder"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.bandit.assert_used]
skips = ["*/tests/*"]
